--- a/Bazano_Sammartino_Mandziuk3.Rmd
+++ b/Bazano_Sammartino_Mandziuk3.Rmd
@@ -25,95 +25,121 @@ opts_chunk$set(echo = TRUE,
                fig.align = "center")
 opts_knit$set(width = 80)
 ```
-# Problem Description
-<div style="text-align: justify">
-The transportation sector is one of the key segments of Poland's economy, with around 7% of its GDP directly linked to transport.[^1] Moreover, around 20% of all UE transport was fulfilled by Poland-based companies[^2], serving as a backbone for trade, logistics, and supply chain management on the continent. With Poland's strategic location as a transit hub in Europe, the demand for commercial vehicles, particularly trucks, is significant and continuously growing[^3]. This dynamic market comprises a wide range of vehicles designed to meet the needs of various industries, from local deliveries to long-haul transportation. Understanding the pricing mechanisms within each segment is essential for car dealerships, manufacturers, transport companies, and all the other stakeholders.  
 
-This report aims to uncover how various truck parameters, such as engine capacity, vehicle age, brand, model, and other factors, affect the pricing of trucks within different segments of the market. Specifically, the study seeks to answer questions about which factors most significantly influence truck prices in the light, medium, and heavy commercial vehicle categories. The core of this student project lies in applying web scraping techniques and leveraging the R programming language to collect and analyze real-world data. The data is sourced from Otomoto[^4], a popular Polish platform for listing second-hand vehicles. By scraping detailed truck listings from this service, the project ensures access to a rich data set that reflects the current market trends and truck offerings.  
-  
+# Problem Description
+
+::: {style="text-align: justify"}
+The transportation sector is one of the key segments of Poland's economy, with around 7% of its GDP directly linked to transport.[^1] Moreover, around 20% of all UE transport was fulfilled by Poland-based companies[^2], serving as a backbone for trade, logistics, and supply chain management on the continent. With Poland's strategic location as a transit hub in Europe, the demand for commercial vehicles, particularly trucks, is significant and continuously growing[^3]. This dynamic market comprises a wide range of vehicles designed to meet the needs of various industries, from local deliveries to long-haul transportation. Understanding the pricing mechanisms within each segment is essential for car dealerships, manufacturers, transport companies, and all the other stakeholders.
+
+This report aims to uncover how various truck parameters, such as engine capacity, vehicle age, brand, model, and other factors, affect the pricing of trucks within different segments of the market. Specifically, the study seeks to answer questions about which factors most significantly influence truck prices in the light, medium, and heavy commercial vehicle categories. The core of this student project lies in applying web scraping techniques and leveraging the R programming language to collect and analyze real-world data. The data is sourced from Otomoto[^4], a popular Polish platform for listing second-hand vehicles. By scraping detailed truck listings from this service, the project ensures access to a rich data set that reflects the current market trends and truck offerings.
+
 By analyzing these factors, the goal is to offer actionable insights for businesses, fleet managers, and individual buyers looking to optimize their purchasing decisions or fleet management strategies. This study leverages data analytics techniques to identify the key price determinants in the truck market. Ultimately, this research will enhance our understanding of how trucks are priced across various weight categories, helping stakeholders make more informed decisions when navigating the truck market.
-</div>
+:::
+
+[^1]: <https://tlp.org.pl/wp-content/uploads/2023/07/raport-transport-drogowy-w-polsce-2023.pdf>
+
+[^2]: <https://www.trade.gov.pl/aktualnosci/polski-transport-to-europejska-potega/>
+
+[^3]: <https://stat.gov.pl/obszary-tematyczne/transport-i-lacznosc/transport/transport-drogowy-w-polsce-w-latach-2022-i-2023,6,8.html>
+
+[^4]: <https://www.otomoto.pl/ciezarowe/mazowieckie>
 
 # Objectives
- This report aims to fulfill 3 main objectives:  
- 
-- **Understand the key characteristics of trucks available for sale**: This includes mileage, fuel type, transmission, engine capacity, power, and origin.  
-- **Evaluate market trends**: Identify patterns in the year of production, popular brands and common features.
-- **Determining price elements**: Discover what are key elements explaining the price of the truck.  
+
+This report aims to fulfill 3 main objectives:
+
+-   **Understand the key characteristics of trucks available for sale**: This includes mileage, fuel type, transmission, engine capacity, power, and origin.\
+-   **Evaluate market trends**: Identify patterns in the year of production, popular brands and common features.
+-   **Determining price elements**: Discover what are key elements explaining the price of the truck.
 
 </div>
 
 # Data
-<div style="text-align: justify">
-The dataset for this analysis was collected using a custom **web scraper** written in **R**, which specifically targeted the **Otomoto website**, a popular marketplace for vehicle sales in Poland. The scraper was designed to extract detailed information about truck offers, with a focus on the **Mazowieckie Voivodeship**.
-</div>
 
-```r
+::: {style="text-align: justify"}
+The dataset for this analysis was collected using a custom **web scraper** written in **R**, which specifically targeted the **Otomoto website**, a popular marketplace for vehicle sales in Poland. The scraper was designed to extract detailed information about truck offers, with a focus on the **Mazowieckie Voivodeship**.
+:::
+
+``` r
 # Example URL structure for scraping listings
 url_base <- "https://www.otomoto.pl/ciezarowe/mazowieckie?search%5Bfilter_enum_damaged%5D=0&page="
 ```
-- **`mazowieckie`** specifies the voivodeship (region).
-- **`filter_enum_damaged=0`** ensures that only undamaged trucks are included.
-- Pagination was handled by iterating over the page parameter (from **1 to 70**), ensuring all results were captured.
-  
+
+-   **`mazowieckie`** specifies the voivodeship (region).
+-   **`filter_enum_damaged=0`** ensures that only undamaged trucks are included.
+-   Pagination was handled by iterating over the page parameter (from **1 to 70**), ensuring all results were captured.
+
 For each page of results, individual truck offer links were identified and collected using **XPath** or **CSS selectors**. These links were essential for accessing detailed truck information. Each truck offer page was parsed to extract the following key details:
 
-- **Truck Specifications**: Mileage, fuel type, engine capacity, power, etc.
-- **Seller Information**: Seller type (private or company), name, and time on the platform.
-- **Price**: The listed price of the truck in PLN.
-- **Location**: The precise location of the seller, including city or region.
-- **Description**: The textual description provided by the seller, often containing additional details about the truck's condition, equipment, and history.
+-   **Truck Specifications**: Mileage, fuel type, engine capacity, power, etc.
+-   **Seller Information**: Seller type (private or company), name, and time on the platform.
+-   **Price**: The listed price of the truck in PLN.
+-   **Location**: The precise location of the seller, including city or region.
+-   **Description**: The textual description provided by the seller, often containing additional details about the truck's condition, equipment, and history.
+
+In the following figures we can observe which values where extracted for each offer:
+
+![](Screenshot 2025-01-29 190559.png){width="630"}
+
+![](Screenshot 2025-01-29 190630.png){width="665"}
+
+![](Screenshot 2025-01-29 190651.png){width="659"}
 
 The dataset was segmented into **light**, **medium**, and **heavy** commercial vehicles (*LCV*, *MCV*, *HCV*) categories based on predefined thresholds based on engine capacity. This segmentation allowed us to tailor the analysis to the unique pricing dynamics of each category. By integrating these methods, we developed a detailed understanding of how different factors contribute to truck pricing in the market.
 
-## **Raw Data**  
+## **Raw Data**
 
-<div style="text-align: justify">
+::: {style="text-align: justify"}
 This file contains the data exactly as it was scraped, including all **inconsistencies**, **missing values**, and **HTML tags** intact. This step ensures that the original data is preserved for verification or reprocessing if needed.
-</div>
+:::
 
-## **Cleaned Data**  
+## **Cleaned Data**
 
-The cleaned dataset consists of **2,172 rows** and **24 columns**, containing information on truck listings from an online marketplace. The data was preprocessed in the **`munging.R`** script, which handled missing values, standardized formats, and derived additional numerical features for easier analysis.  
+The cleaned dataset consists of **2,172 rows** and **24 columns**, containing information on truck listings from an online marketplace. The data was preprocessed in the **`munging.R`** script, which handled missing values, standardized formats, and derived additional numerical features for easier analysis.
 
-### **Key Features in the Dataset**  
+### **Key Features in the Dataset**
 
-#### **Basic Information**  
-- `offer_name` *(chr)*: The title of the truck listing, which typically includes the brand, model, and other specifications.  
-- `production_year` *(int)*: The manufacturing year of the truck, which allows us to compute the age of the vehicle.  
-- `price` *(chr → int: price_num)*: The listed price of the truck in **PLN** (Polish Złoty). Prices were cleaned by removing spaces and converting them into numerical format.  
-- `mileage_km` *(chr → int: mileage_km_num)*: The total distance traveled by the truck, originally stored as a string with "km" and converted into numeric form.  
+#### **Basic Information**
 
-#### **Vehicle Specifications**  
-- `vehicle_brand` *(chr)*: The manufacturer of the truck (e.g., **Mercedes-Benz, Volvo, Scania**).  
-- `vehicle_model` *(chr)*: The specific model of the truck.  
-- `fuel_type` *(chr)*: The type of fuel the truck uses (e.g., **Diesel**). Almost all listings use **Diesel**, making it a homogeneous feature.  
-- `transmission` *(chr)*: The type of gearbox (**Manualna** = manual, **Automatyczna** = automatic).  
-- `engine_capacity` *(chr → int: engine_capacity_num)*: The engine size in cubic centimeters (cm³). Extracted and converted into numeric format for analysis.  
-- `power` *(chr → int: power_num)*: The engine power in **KM (Kilowatts/horsepower)**. This value was cleaned and converted into numerical format.  
-- `weight_kg` *(int → int: weight_kg_num)*: The truck's weight in **kg**, available for a subset of listings.  
+-   `offer_name` *(chr)*: The title of the truck listing, which typically includes the brand, model, and other specifications.\
+-   `production_year` *(int)*: The manufacturing year of the truck, which allows us to compute the age of the vehicle.\
+-   `price` *(chr → int: price_num)*: The listed price of the truck in **PLN** (Polish Złoty). Prices were cleaned by removing spaces and converting them into numerical format.\
+-   `mileage_km` *(chr → int: mileage_km_num)*: The total distance traveled by the truck, originally stored as a string with "km" and converted into numeric form.
 
-#### **Seller Information**  
-- `seller_name` *(chr)*: The name of the seller, either an individual or a dealership/company.  
-- `seller_type` *(chr)*: The type of seller (**"Osoba prywatna"** = private individual, **"Firma"** = company). Some values were missing and require further analysis.  
-- `seller_time_on_site` *(chr)*: The duration the seller has been active on the platform, useful for assessing credibility.  
+#### **Vehicle Specifications**
 
-#### **Location & Origin**  
-- `country_of_origin` *(chr)*: The country where the truck was originally registered (e.g., **Polska, Niemcy, Finlandia**). Many entries are missing, which suggests that this field may not always be provided.  
-- `location` *(chr)*: The seller’s location, often including city and region within Poland.  
+-   `vehicle_brand` *(chr)*: The manufacturer of the truck (e.g., **Mercedes-Benz, Volvo, Scania**).\
+-   `vehicle_model` *(chr)*: The specific model of the truck.\
+-   `fuel_type` *(chr)*: The type of fuel the truck uses (e.g., **Diesel**). Almost all listings use **Diesel**, making it a homogeneous feature.\
+-   `transmission` *(chr)*: The type of gearbox (**Manualna** = manual, **Automatyczna** = automatic).\
+-   `engine_capacity` *(chr → int: engine_capacity_num)*: The engine size in cubic centimeters (cm³). Extracted and converted into numeric format for analysis.\
+-   `power` *(chr → int: power_num)*: The engine power in **KM (Kilowatts/horsepower)**. This value was cleaned and converted into numerical format.\
+-   `weight_kg` *(int → int: weight_kg_num)*: The truck's weight in **kg**, available for a subset of listings.
 
-#### **Derived Features (Numeric Conversions)** 
-- `years` *(int)*: The age of the vehicle, derived from `production_year` by subtracting from the current year.  
- 
-  
+#### **Seller Information**
+
+-   `seller_name` *(chr)*: The name of the seller, either an individual or a dealership/company.\
+-   `seller_type` *(chr)*: The type of seller (**"Osoba prywatna"** = private individual, **"Firma"** = company). Some values were missing and require further analysis.\
+-   `seller_time_on_site` *(chr)*: The duration the seller has been active on the platform, useful for assessing credibility.
+
+#### **Location & Origin**
+
+-   `country_of_origin` *(chr)*: The country where the truck was originally registered (e.g., **Polska, Niemcy, Finlandia**). Many entries are missing, which suggests that this field may not always be provided.\
+-   `location` *(chr)*: The seller’s location, often including city and region within Poland.
+
+#### **Derived Features (Numeric Conversions)**
+
+-   `years` *(int)*: The age of the vehicle, derived from `production_year` by subtracting from the current year.
+
 # Model description
-<div style="text-align: justify">
-To analyze the factors affecting truck prices across various weight categories, we applied a combination of machine learning models and data analysis techniques.  
-  
+
+::: {style="text-align: justify"}
+To analyze the factors affecting truck prices across various weight categories, we applied a combination of machine learning models and data analysis techniques.
+
 Our primary method was **Random Forest**, an ensemble learning algorithm well-suited for capturing complex, non-linear interactions between variables. This model was utilized to determine feature importance, shedding light on which attributes, such as engine capacity, vehicle age, brand, and condition, played the most critical roles in determining truck prices.
 
 In addition, **Linear Regression** was used as a baseline model to assess how specific factors influence pricing. This approach offered a straightforward interpretation of relationships between variables, particularly for continuous predictors like engine capacity and truck age. To further support the analysis, we performed **Correlation Studies** to measure the strength and direction of relationships between key features and truck prices.
-</div>
+:::
 
 # Obtained Results
 
@@ -132,6 +158,7 @@ glimpse(cleaned_data)
 ```
 
 ### Distribution of truck production years
+
 ```{r}
 ggplot(cleaned_data, aes(x = as.numeric(production_year))) +
   geom_histogram(binwidth = 1, fill = "darkred", alpha = 0.7) +
@@ -148,6 +175,7 @@ Additionally, while the median production year falls within this central range, 
 This trend provides valuable insights for both buyers and sellers. Buyers may find the most options and competitive pricing in the 2010–2015 range, whereas sellers with older or newer trucks may need to adjust their pricing strategy accordingly.
 
 ### Top 10 brands by frequency
+
 ```{r}
 library(ggplot2)
 library(dplyr)
@@ -165,8 +193,8 @@ top_brands <- cleaned_data %>%
 ggplot(top_brands, aes(x = reorder(vehicle_brand, n), y = n, fill = n)) +
   geom_bar(stat = "identity", show.legend = FALSE) +
   geom_text(aes(label = paste0(round(percentage, 1), "%")), 
-            position = position_stack(vjust = 0.5),
-            size = 4, color = "white") +
+            hjust = -0.1,
+            size = 3, color = "darkred") +
   coord_flip() +
   scale_fill_gradient(low = "red", high = "darkred") + 
   labs(title = "Top 10 Truck Brands in the Market",
@@ -175,15 +203,15 @@ ggplot(top_brands, aes(x = reorder(vehicle_brand, n), y = n, fill = n)) +
   theme_minimal()
 
 ```
-  
+
 ***Key Insights:*** The truck market is heavily dominated by MAN and Mercedes-Benz, which together account for over 40% of the listings. This suggests that these brands are widely preferred, likely due to their strong reputation for reliability, availability, and resale value. Their dominance may also indicate that they have well-established distribution networks and after-sales services, making them a top choice for businesses and individual buyers looking for durable and efficient trucks. The presence of these brands at the top of the market highlights their competitive advantage in terms of performance and customer trust.
 
 Following closely behind, DAF, Scania, and Volvo make up a significant portion of the market, collectively representing around 40% of the listings. These brands are known for their engineering quality, fuel efficiency, and longevity, which makes them attractive to trucking companies and logistics providers. While not as dominant as MAN and Mercedes-Benz, their strong presence suggests they are still among the preferred options for buyers who prioritize performance and durability. Renault and Iveco also hold a notable share but do not reach the same level of demand, potentially indicating that they cater to a more specific segment of the market.
 
 In contrast, brands like Krone, Ford, Volkswagen, and FUSO are represented in much smaller numbers, each accounting for 4% or less of the listings. This could be due to lower demand, fewer available models, or a focus on niche segments within the trucking industry. For sellers, this means that offering trucks from these brands may require competitive pricing strategies or targeting specialized buyers. On the other hand, buyers interested in these brands may face limited options, making it necessary to act quickly when a suitable listing appears. These trends suggest that market availability strongly influences purchasing decisions and brand popularity.
 
-
 ### Price distribution of Top 10 brands
+
 ```{r}
 top_brands <- cleaned_data %>%
   count(vehicle_brand, sort = TRUE) %>%
@@ -216,21 +244,21 @@ ggplot(price_range, aes(x = vehicle_brand, y = min_price)) +
   theme_minimal() +
   theme(legend.position = "none")
 ```
-  
-***Key Insights:*** Based on the visual analysis of truck prices by brand, we can now make a more informed recommendation for companies looking to purchase trucks. To guide this decision, we referred to a trusted source (https://www.tip-used.com/en-gb/what-best-brand-trucks-europe), which ranks truck brands in Europe by factors such as capacity and power. The top recommended brands are as follows:
 
-1. Volvo  
-2. MAN  
-3. DAF  
-4. Scarnia  
-5. Daimer  
-6. Iveco  
-7. Renault  
+***Key Insights:*** Based on the visual analysis of truck prices by brand, we can now make a more informed recommendation for companies looking to purchase trucks. To guide this decision, we referred to a trusted source (<https://www.tip-used.com/en-gb/what-best-brand-trucks-europe>), which ranks truck brands in Europe by factors such as capacity and power. The top recommended brands are as follows:
+
+1.  Volvo\
+2.  MAN\
+3.  DAF\
+4.  Scarnia\
+5.  Daimer\
+6.  Iveco\
+7.  Renault
 
 With this list in mind, companies can now consider both the price distribution and the reputation of these brands in Europe. For businesses aiming to make a strategic purchase, we recommend focusing on DAF or Scania trucks. These brands stand out not only because they are highly regarded in Europe but also because they have a strong presence in the market, with plenty of available offers and relatively stable price ranges. The lower price variation for these brands makes them a smart choice for companies seeking reliable trucks at competitive prices, ensuring both value and performance.
 
-
 ### Seller types
+
 ```{r}
 ggplot(cleaned_data %>% filter(!is.na(seller_type)), aes(x = seller_type, fill = ..count..)) +  # Use ..count.. for fill color
   geom_bar(stat = "count", show.legend = FALSE) +
@@ -243,15 +271,15 @@ ggplot(cleaned_data %>% filter(!is.na(seller_type)), aes(x = seller_type, fill =
        y = "Count") +
   theme_minimal()
 ```
-  
+
 ***Key Insights:*** The data shows that most of the truck listings are from private sellers, which is quite interesting given that trucks are often bought by businesses or companies for commercial use. This observation stands out because we might expect companies to be the primary sellers in the market, given the high demand for trucks in industries like logistics, construction, and transportation. However, the majority of the listings coming from private individuals suggests that there could be more personal sales happening than we might have initially assumed.
 
 One possible explanation for this could be that many truck owners, whether they are individuals or small business owners, may prefer to sell their trucks privately rather than through dealerships or business transactions. Private sellers might also be looking to upgrade their vehicles or downsize, leading them to list trucks that were once used for business purposes. This trend could point to a larger number of smaller businesses or individual entrepreneurs who own and sell trucks on their own.
 
-
 ### Price Distribution by Vehicle Brand
 
 This visualization shows how truck prices vary across different brands.
+
 ```{r}
 top_10_brands <- cleaned_data %>%
   count(vehicle_brand, sort = TRUE) %>%
@@ -279,7 +307,7 @@ ggplot(filtered_data, aes(x = vehicle_brand,
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
-  
+
 ```{r}
 ggplot(filtered_data, aes(x = vehicle_brand, 
                           y = as.numeric(str_replace(price, " ", "")))) +
@@ -289,11 +317,12 @@ ggplot(filtered_data, aes(x = vehicle_brand,
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
-```  
-  
+```
+
 ***Key Insights:*** The boxplot and the violin plot illustrates the price distribution of the top 10 most common truck brands in the dataset. The median price for most brands appears to be relatively similar, except for Krone, which has a significantly lower price range. Brands like Mercedes-Benz, MAN, and Volvo exhibit a wider price distribution, with higher interquartile ranges and many extreme outliers. This suggests that these brands offer both budget-friendly and high-end models. Iveco and Renault also show a considerable spread but with fewer extreme outliers compared to Mercedes-Benz and Volvo. The presence of numerous red dots (outliers) across most brands indicates that some trucks are priced significantly higher than the majority, possibly due to special features, low mileage, or newer models.
 
 ### Years vs. Price
+
 ```{r}
 ggplot(cleaned_data, aes(x = years, 
                          y = as.numeric(str_replace(price, " ", "")))) +
@@ -303,19 +332,13 @@ ggplot(cleaned_data, aes(x = years,
        x = "Production Year", y = "Price (PLN)") +
   theme_minimal()
 ```
-  
+
 ***Key Insights:*** The relationship between truck age and price shows a clear trend: as trucks get older, their price goes down. This makes sense because older trucks usually have more wear and tear, might need more repairs, and often lack the newer features found in more recent models. The fact that the price drops steadily with age is not surprising and follows a simple pattern of depreciation where the truck’s value decreases at a consistent rate over time.
 
 Newer trucks typically offer more modern features, better fuel efficiency, and are seen as more reliable, which makes them more valuable. Older trucks, on the other hand, are seen as less desirable because they often come with higher maintenance costs and potential issues. The more a truck is used, the less buyers are willing to pay for it, which naturally drives the price down.
 
 The linear pattern of this decline in price shows that the used truck market follows a predictable trend. Buyers and sellers can expect that the older the truck, the lower the price will be, and this helps set clear expectations for both parties. This simple trend is a good example of how vehicles lose value over time, and it's easy to see how it works in practice.
 
-
 # Conclusions
 
 # Sources
-[^1]:   https://tlp.org.pl/wp-content/uploads/2023/07/raport-transport-drogowy-w-polsce-2023.pdf
-[^2]:   https://www.trade.gov.pl/aktualnosci/polski-transport-to-europejska-potega/
-[^3]:   https://stat.gov.pl/obszary-tematyczne/transport-i-lacznosc/transport/transport-drogowy-w-polsce-w-latach-2022-i-2023,6,8.html
-[^4]:   https://www.otomoto.pl/ciezarowe/mazowieckie
-[^5]:   https://afdc.energy.gov/data/10380
